// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkNudger should render as a configurable nudger correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-nudger"
  >
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      title="Decrease"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
          />
        </svg>
      </span>
    </button>
    <input
      aria-live="assertive"
      class="bpk-nudger__input"
      id="nudger"
      readonly=""
      type="text"
      value="premium"
    />
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      title="Increase"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkNudger should render as an outline nudger correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-nudger"
  >
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--outline bpk-nudger__button"
      title="Decrease"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
          />
        </svg>
      </span>
    </button>
    <input
      aria-live="assertive"
      class="bpk-nudger__input bpk-nudger__input--numeric bpk-nudger__input--outline"
      id="nudger"
      readonly=""
      type="text"
      value="2"
    />
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--outline bpk-nudger__button"
      title="Increase"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkNudger should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-nudger"
  >
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      title="Decrease"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
          />
        </svg>
      </span>
    </button>
    <input
      aria-live="assertive"
      class="bpk-nudger__input bpk-nudger__input--numeric"
      id="nudger"
      readonly=""
      type="text"
      value="2"
    />
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      title="Increase"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkNudger should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-nudger my-nudger"
  >
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      title="Decrease"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
          />
        </svg>
      </span>
    </button>
    <input
      aria-live="assertive"
      class="bpk-nudger__input bpk-nudger__input--numeric"
      id="nudger"
      readonly=""
      type="text"
      value="2"
    />
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      title="Increase"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkNudger should render correctly with a value < min 1`] = `
<DocumentFragment>
  <div
    class="bpk-nudger"
  >
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      disabled=""
      title="Decrease"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon bpk-nudger__icon--disabled"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
          />
        </svg>
      </span>
    </button>
    <input
      aria-live="assertive"
      class="bpk-nudger__input bpk-nudger__input--numeric"
      id="nudger"
      readonly=""
      type="text"
      value="0"
    />
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      title="Increase"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkNudger should render correctly with a value = max 1`] = `
<DocumentFragment>
  <div
    class="bpk-nudger"
  >
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      title="Decrease"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
          />
        </svg>
      </span>
    </button>
    <input
      aria-live="assertive"
      class="bpk-nudger__input bpk-nudger__input--numeric"
      id="nudger"
      readonly=""
      type="text"
      value="9"
    />
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      disabled=""
      title="Increase"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon bpk-nudger__icon--disabled"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkNudger should render correctly with a value = min 1`] = `
<DocumentFragment>
  <div
    class="bpk-nudger"
  >
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      disabled=""
      title="Decrease"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon bpk-nudger__icon--disabled"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
          />
        </svg>
      </span>
    </button>
    <input
      aria-live="assertive"
      class="bpk-nudger__input bpk-nudger__input--numeric"
      id="nudger"
      readonly=""
      type="text"
      value="1"
    />
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      title="Increase"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkNudger should render correctly with a value > max 1`] = `
<DocumentFragment>
  <div
    class="bpk-nudger"
  >
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      title="Decrease"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
          />
        </svg>
      </span>
    </button>
    <input
      aria-live="assertive"
      class="bpk-nudger__input bpk-nudger__input--numeric"
      id="nudger"
      readonly=""
      type="text"
      value="10"
    />
    <button
      aria-controls="nudger"
      class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
      disabled=""
      title="Increase"
      type="button"
    >
      <span
        style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          class="bpk-nudger__icon bpk-nudger__icon--disabled"
          height="8"
          style="width: .5rem; height: .5rem;"
          viewBox="0 0 16 16"
          width="8"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;
